--- a/election_calculator.ui
+++ b/election_calculator.ui
@@ -17,7 +17,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>630</x>
       <y>290</y>
       <width>71</width>
       <height>21</height>
@@ -36,7 +36,7 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>690</x>
+      <x>720</x>
       <y>290</y>
       <width>51</width>
       <height>21</height>
@@ -55,7 +55,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>860</x>
+      <x>890</x>
       <y>280</y>
       <width>61</width>
       <height>31</height>
@@ -74,7 +74,7 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>770</x>
+      <x>800</x>
       <y>290</y>
       <width>67</width>
       <height>17</height>
@@ -93,7 +93,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>560</x>
       <y>280</y>
       <width>41</width>
       <height>41</height>
@@ -120,7 +120,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>16</pointsize>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="text">
@@ -146,7 +146,7 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>420</x>
       <y>50</y>
       <width>731</width>
       <height>221</height>
@@ -156,7 +156,7 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>610</x>
       <y>0</y>
       <width>371</width>
       <height>41</height>
@@ -177,7 +177,7 @@
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>960</x>
+      <x>990</x>
       <y>280</y>
       <width>41</width>
       <height>31</height>
@@ -196,7 +196,7 @@
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>570</x>
       <y>360</y>
       <width>131</width>
       <height>17</height>
@@ -209,7 +209,7 @@
    <widget class="QLabel" name="label_PiSKonf">
     <property name="geometry">
      <rect>
-      <x>690</x>
+      <x>720</x>
       <y>360</y>
       <width>67</width>
       <height>17</height>
@@ -222,7 +222,7 @@
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>880</x>
+      <x>910</x>
       <y>360</y>
       <width>71</width>
       <height>17</height>
@@ -235,7 +235,7 @@
    <widget class="QLabel" name="label_Opposition">
     <property name="geometry">
      <rect>
-      <x>960</x>
+      <x>990</x>
       <y>360</y>
       <width>67</width>
       <height>17</height>
@@ -248,7 +248,7 @@
    <widget class="QLabel" name="label_PiS">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>550</x>
       <y>320</y>
       <width>67</width>
       <height>17</height>
@@ -264,7 +264,7 @@
    <widget class="QLabel" name="label_KO">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>630</x>
       <y>320</y>
       <width>67</width>
       <height>17</height>
@@ -280,7 +280,7 @@
    <widget class="QLabel" name="label_Lewica">
     <property name="geometry">
      <rect>
-      <x>680</x>
+      <x>710</x>
       <y>320</y>
       <width>67</width>
       <height>17</height>
@@ -296,7 +296,7 @@
    <widget class="QLabel" name="label_TD">
     <property name="geometry">
      <rect>
-      <x>770</x>
+      <x>800</x>
       <y>320</y>
       <width>67</width>
       <height>17</height>
@@ -312,7 +312,7 @@
    <widget class="QLabel" name="label_Konfederacja">
     <property name="geometry">
      <rect>
-      <x>860</x>
+      <x>890</x>
       <y>320</y>
       <width>67</width>
       <height>17</height>
@@ -328,7 +328,7 @@
    <widget class="QLabel" name="label_MN">
     <property name="geometry">
      <rect>
-      <x>950</x>
+      <x>980</x>
       <y>320</y>
       <width>67</width>
       <height>17</height>
@@ -500,6 +500,474 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="label_error">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>340</y>
+      <width>271</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>390</y>
+      <width>1181</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>26</x>
+      <y>420</y>
+      <width>291</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; text-decoration: underline;&quot;&gt;Wybierz okręg wyborczy&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QStackedWidget" name="stackedWidget">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>410</y>
+      <width>821</width>
+      <height>381</height>
+     </rect>
+    </property>
+    <property name="currentIndex">
+     <number>1</number>
+    </property>
+    <widget class="QWidget" name="page">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label_17">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#77767b;&quot;&gt;Aby zobaczyć widok okręgu wpisz wynik wyborów w scenariuszu głównym i wybierz okrąg&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="page_2">
+     <widget class="QTableWidget" name="tableWidget_results">
+      <property name="geometry">
+       <rect>
+        <x>325</x>
+        <y>60</y>
+        <width>491</width>
+        <height>227</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>291</width>
+        <height>371</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QTabWidget" name="tabWidget">
+         <property name="currentIndex">
+          <number>0</number>
+         </property>
+         <widget class="QWidget" name="tab">
+          <attribute name="title">
+           <string>Mapa okręgu</string>
+          </attribute>
+          <widget class="QLabel" name="label_map">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>10</y>
+             <width>281</width>
+             <height>251</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="scaledContents">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_boundaries">
+           <property name="geometry">
+            <rect>
+             <x>6</x>
+             <y>270</y>
+             <width>271</width>
+             <height>61</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </widget>
+         <widget class="QWidget" name="tab_2">
+          <attribute name="title">
+           <string>Informacje o okręgu</string>
+          </attribute>
+          <widget class="QLabel" name="label_18">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>20</y>
+             <width>91</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Populacja:</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_population">
+           <property name="geometry">
+            <rect>
+             <x>140</x>
+             <y>20</y>
+             <width>101</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_20">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>70</y>
+             <width>101</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Powierzchnia:</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_area">
+           <property name="geometry">
+            <rect>
+             <x>140</x>
+             <y>70</y>
+             <width>101</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_21">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>120</y>
+             <width>141</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Gęstość: </string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_density">
+           <property name="geometry">
+            <rect>
+             <x>140</x>
+             <y>120</y>
+             <width>101</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_24">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>180</y>
+             <width>241</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Liczba mieszkańców na mandat:</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_popmandate">
+           <property name="geometry">
+            <rect>
+             <x>100</x>
+             <y>210</y>
+             <width>67</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_26">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>250</y>
+             <width>251</width>
+             <height>20</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Względna (do Warszawy) siła głosu:</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_voters_per_seat">
+           <property name="geometry">
+            <rect>
+             <x>100</x>
+             <y>280</y>
+             <width>67</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </widget>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QLabel" name="label_22">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>310</y>
+        <width>131</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Liczba mandatów:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_mandates">
+      <property name="geometry">
+       <rect>
+        <x>620</x>
+        <y>310</y>
+        <width>67</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_attendance">
+      <property name="geometry">
+       <rect>
+        <x>620</x>
+        <y>350</y>
+        <width>67</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_23">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>350</y>
+        <width>141</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Frekwencja w 2019:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_district">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>10</y>
+        <width>481</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </widget>
+   </widget>
+   <widget class="QListWidget" name="districts">
+    <property name="geometry">
+     <rect>
+      <x>25</x>
+      <y>460</y>
+      <width>291</width>
+      <height>341</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_mainScenario">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>310</y>
+      <width>151</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Scenariusz główny</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_flis">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>330</y>
+      <width>112</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Wzór Flisa</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>300</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>310</y>
+      <width>20</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_4">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>350</y>
+      <width>161</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_5">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>310</y>
+      <width>20</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
